--- a/index.html
+++ b/index.html
@@ -5,7 +5,18 @@
     <link rel="icon" type="image/svg+xml" href="/tepa-removebg-preview.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TEPA - Teenage Pregnancy Awareness Project </title>
+    <meta name="description" content="The Teenage Pregnancy Awareness Project (TEPA) is a non-profit organization that works to raise awareness of teenage pregnancy and to provide support to pregnant teenagers and their families.">
+
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Teenage Pregnancy Awareness Project",
+      "description": "TheTeenage Pregnancy Awareness Project (TEPA) is a non-profit organization that works to raise awareness of teenage pregnancy and to provide support to pregnant teenagers and their families.",
+    }
+    </script>
+    <title>Teenage Pregnancy Awareness Project - TEPA</title>
   </head>
   <body>
     <div id="root"></div>
