--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="The Teenage Pregnancy Awareness Project (TEPA) is a non-profit organization that works to raise awareness of teenage pregnancy and to provide support to pregnant teenagers and their families.">
+    <meta name="google-site-verification" content="FT9QqqGi_ryj_1XKFX_gjGiVa2GMTwyIA2BarYedUbQ" />
 
 
     <script type="application/ld+json">
