--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       "@context": "https://schema.org",
       "@type": "Organization",
       "name": "Teenage Pregnancy Awareness Project",
-      "description": "TheTeenage Pregnancy Awareness Project (TEPA) is a non-profit organization that works to raise awareness of teenage pregnancy and to provide support to pregnant teenagers and their families.",
+      "description": "TheTeenage Pregnancy Awareness Project (TEPA) is a non-profit organization that works to raise awareness of teenage pregnancy and to provide support to pregnant teenagers and their families."
     }
     </script>
     <title>Teenage Pregnancy Awareness Project - TEPA</title>
