--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/tepa-logo.png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="The Teenage Pregnancy Awareness Project (TEPA) inKenya is a non-profit organization that works to raise awareness of teenage pregnancy and to provide support to pregnant teenagers and their families in Kenya.">
-    <meta name="google-site-verification" content="FT9QqqGi_ryj_1XKFX_gjGiVa2GMTwyIA2BarYedUbQ" />
-
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="The Teenage Pregnancy Awareness Project (TEPA) in Kenya is a non-profit organization that works to raise awareness of teenage pregnancy and to provide support to pregnant teenagers and their families in Kenya.">
+    <title>TEPA Kenya | Teenage Pregnancy Awareness Project in Kenya</title>
+    <link rel="icon" type="image/svg+xml" href="/tepa-logo.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap">
+    <link rel="canonical" href="https://www.tepa2030.org">
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx" defer></script>
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -16,15 +21,15 @@
         "name": "TEPA Kenya | Teenage Pregnancy Awareness Project in Kenya",
         "description": "The Teenage Pregnancy Awareness Project (TEPA) is a non-profit organization in Kenya dedicated to raising awareness of teenage pregnancy and providing support to pregnant teenagers and their families.",
         "url": "https://www.tepa2030.org",
-        "logo": "https://www.tepa2030.org/tepa-logo.png", 
+        "logo": "https://www.tepa2030.org/tepa-logo.png",
         "sameAs": [
           "https://web.facebook.com/Teenage.PA?_rdc=1&_rdr",
           "https://instagram.com/tepa.ke?igshid=MzRlODBiNWFlZA=="
         ],
         "contactPoint": {
           "@type": "ContactPoint",
-          "telephone": "+254712027836", 
-          "email": "ceo@tepa.co.ke" 
+          "telephone": "+254712027836",
+          "email": "ceo@tepa.co.ke"
         },
         "address": {
           "@type": "PostalAddress",
@@ -35,12 +40,6 @@
           "addressCountry": "Kenya"
         }
       }
-      </script>
-      
-    <title>TEPA Kenya | Teenage Pregnancy Awareness Project in Kenya</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    </script>
   </body>
 </html>
