--- a/index.html
+++ b/index.html
@@ -3,40 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="The Teenage Pregnancy Awareness Project (TEPA) in Kenya is a non-profit organization that works to raise awareness of teenage pregnancy and to provide support to pregnant teenagers and their families in Kenya.">
-    <title>TEPA Kenya | Teenage Pregnancy Awareness Project in Kenya</title>
-    <link rel="icon" type="image/svg+xml" href="/tepa-logo.png">
-    <link rel="canonical" href="https://www.tepa2030.org">
+    <meta name="description" content=" Dini Ya Roho Mafuta Pole Ya Africa is religious organization and a church which is legally registered in Kenya and  Uganda and  whose vision is to spires to be the voice and the hand that encourages people to change their lives with hope, comfort and peace for the Glory of God and whose mission statement is to connect with God through Faith, connect with others through love, and connect others with God through His Word and to be the voice of Hope for the poor and vulnerable people in Kenya, Africa and the world.   ">
+    <title>Dini Ya Roho Mafuta Pole Ya Africa </title>
+    <link rel="icon" type="image/svg+xml" href="images/logo.png">
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx" defer></script>
-    <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "Organization",
-        "name": "TEPA Kenya | Teenage Pregnancy Awareness Project in Kenya",
-        "description": "The Teenage Pregnancy Awareness Project (TEPA) is a non-profit organization in Kenya dedicated to raising awareness of teenage pregnancy and providing support to pregnant teenagers and their families.",
-        "url": "https://www.tepa2030.org",
-        "logo": "https://www.tepa2030.org/tepa-logo.png",
-        "sameAs": [
-          "https://web.facebook.com/Teenage.PA?_rdc=1&_rdr",
-          "https://instagram.com/tepa.ke?igshid=MzRlODBiNWFlZA=="
-        ],
-        "contactPoint": {
-          "@type": "ContactPoint",
-          "telephone": "+254712027836",
-          "email": "ceo@tepa.co.ke"
-        },
-        "address": {
-          "@type": "PostalAddress",
-          "streetAddress": "Kibera, Nairobi",
-          "addressLocality": "Nairobi",
-          "addressRegion": "Nairobi County",
-          "postalCode": "00100",
-          "addressCountry": "Kenya"
-        }
-      }
-    </script>
   </body>
 </html>
